<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".info">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/white"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/guide"
                    android:background="#03A9F4"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="30dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="6dp"
                    android:text="@string/step1"
                    android:textSize="24dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="106dp"
                    android:layout_gravity="center"
                    android:src="@drawable/button" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="6dp"
                    android:text="@string/step2"
                    android:textSize="24dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="106dp"
                    android:layout_gravity="center"
                    android:src="@drawable/button" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="6dp"
                    android:text="@string/step3"
                    android:textSize="24dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="106dp"
                    android:layout_gravity="center"
                    android:src="@drawable/find" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/contact"
                    android:background="#03A9F4"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="30dp"/>

                <Button
                    android:id="@+id/btnMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:drawableLeft="@drawable/baseline_email_24"
                    android:layout_gravity="center"
                    android:backgroundTint="#E11919"
                    android:text="@string/Mail" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/follow"
                    android:background="#03A9F4"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="30dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">
                    <ImageView
                        android:id="@+id/imgLink"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/linkedin"/>
                    <ImageView
                        android:id="@+id/imgX"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/twitter"/>
                    <ImageView
                        android:id="@+id/imgGithub"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/github"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/creater"
            android:textSize="20dp"
            android:gravity="center"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/sprouts"/>
    </LinearLayout>
</ScrollView>